--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
 	<properties>
 		<java.version>22</java.version>
 		<amazon.version>1.12.757</amazon.version>
+		<flyway.postgres.version>10.15.2</flyway.postgres.version>
+		<testcontainers.version>1.19.8</testcontainers.version>
+		<assertj.version>3.26.0</assertj.version>
 	</properties>
 
 	<dependencies>
@@ -41,8 +44,21 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>localstack</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -54,7 +70,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-database-postgresql</artifactId>
-			<version>10.15.2</version>
+			<version>${flyway.postgres.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
